[gd_scene load_steps=4 format=3 uid="uid://cn6t8tchbbaqm"]

[ext_resource type="Script" path="res://scripts/multiplayer_menu.gd" id="1_12jt7"]
[ext_resource type="FontFile" uid="uid://pbrbu6kkxj16" path="res://assets/fonts/PixelOperator8.ttf" id="2_7e443"]
[ext_resource type="Texture2D" uid="uid://rq7vkqyvutu4" path="res://assets/images/multiplayer.png" id="3_ayg00"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12jt7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.5
offset_top = -114.5
offset_right = 310.5
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 20)
layout_mode = 2

[node name="JoinGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 21.085)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.84
theme_override_fonts/font = ExtResource("2_7e443")
theme_override_font_sizes/font_size = 30
text = "Join Game"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 20)
layout_mode = 2

[node name="HostGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 21.085)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.84
theme_override_fonts/font = ExtResource("2_7e443")
theme_override_font_sizes/font_size = 30
text = "Host Game"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 20)
layout_mode = 2

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 21.085)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.84
theme_override_fonts/font = ExtResource("2_7e443")
theme_override_font_sizes/font_size = 30
text = "Exit
"

[node name="Multiplayer" type="Sprite2D" parent="."]
position = Vector2(181, -3)
texture = ExtResource("3_ayg00")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_menu_pressed"]
